--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "prettier": "2.6.2"
     },
     "dependencies": {
+        "body-parser": "^1.20.0",
         "express": "4.18.1"
     }
 }
