--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "prettier": "2.6.2"
     },
     "dependencies": {
-        "body-parser": "^1.20.0",
+        "body-parser": "1.20.0",
+        "cors": "2.8.5",
         "express": "4.18.1"
     }
 }
